[Misc] Improve MD syntax + add doc for xwikiBuild step